# robovie_r4_ros

./: README.md
r4_control/: CHANGELOG.rst  CMakeLists.txt  package.xml
r4_control/config/: r4_controllers.yaml
r4_control/include/r4_control/: r4_hw_interface.h
r4_control/launch/: bringup.launch  bringup_no_rover.launch  r4_control_HW.launch
r4_control/msg/: r4Cmd.msg  r4Sensor.msg
r4_control/rviz/: no-rover.rviz  with-rover.rviz
r4_control/src/: r4_hw_interface.cpp  r4_hw_interface1.cpp  r4_hw_main.cpp  r4_sim_echo.cpp
r4_description/: CHANGELOG.rst  CMakeLists.txt  package.xml
r4_description/launch/: display.launch  gazebo.launch
r4_description/meshes/: head_1.stl  l_arm_1.stl  l_elbow_1.stl  l_hand_1.stl  l_shoulder_1.stl  neck_roll_link_1.stl  neck_yaw_link_1.stl  r_arm_1.stl  r_elbow_1.stl  r_hand_1.stl  r_shoulder_1.stl  torso_link_r4.stl
r4_description/rviz/: urdf.rviz
r4_description/urdf/: materials.xacro  robovie_r4.gazebo  robovie_r4.trans  robovie_r4.xacro  robovie_r4_base.xacro  robovie_r4_rover.xacro
r4_motion/: CHANGELOG.rst  CMakeLists.txt  package.xml
r4_motion/src/: move_group_joint_value.cpp
r4_moveit_config/: .setup_assistant  CHANGELOG.rst  CMakeLists.txt  package.xml
r4_moveit_config/config/: fake_controllers.yaml  joint_limits.yaml  kinematics.yaml  ompl_planning.yaml  robovie_r4.srdf  robovie_r4_rover.srdf  ros_controllers.yaml  simple_moveit_controllers.yaml  stomp_planning.yaml
r4_moveit_config/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  move_group.launch  moveit.rviz  moveit_rover.rviz  ompl-chomp_planning_pipeline.launch.xml  ompl_planning_pipeline.launch.xml  planning_context.launch  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  simple_moveit_controller_manager.launch.xml  stomp_planning_pipeline.launch.xml
