<?xml version="1.0"?>
<package format="2">
  <name>r4_control</name>
  <version>1.0.1</version>
  <description>The r4_control package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <maintainer email="infodesk@vstone.co.jp">Vstone</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
<build_depend>cmake_modules</build_depend>
<build_depend>hardware_interface</build_depend>
<build_depend>controller_manager</build_depend>
<build_depend>control_msgs</build_depend>
<build_depend>urdf</build_depend>
<build_depend>std_msgs</build_depend>
<build_export_depend>cmake_modules</build_export_depend>
<build_export_depend>hardware_interface</build_export_depend>
<build_export_depend>controller_manager</build_export_depend>
<build_export_depend>control_msgs</build_export_depend>
<build_export_depend>urdf</build_export_depend>
<build_export_depend>std_msgs</build_export_depend>
<exec_depend>cmake_modules</exec_depend>
<exec_depend>hardware_interface</exec_depend>
<exec_depend>controller_manager</exec_depend>
<exec_depend>control_msgs</exec_depend>
<exec_depend>urdf</exec_depend>
<exec_depend>std_msgs</exec_depend>
<build_depend>roscpp</build_depend>
<build_export_depend>roscpp</build_export_depend>
<exec_depend>roscpp</exec_depend>
<build_depend>message_generation</build_depend>
<build_export_depend>message_generation</build_export_depend>
<exec_depend>message_runtime</exec_depend>
<build_depend>ros_control_boilerplate</build_depend>

<build_export_depend>ros_control_boilerplate</build_export_depend>

<exec_depend>message_generation</exec_depend>
<exec_depend>ros_control_boilerplate</exec_depend>

<build_depend>moveit_ros_planning_interface</build_depend>
<build_export_depend>moveit_ros_planning_interface</build_export_depend>
<exec_depend>moveit_ros_planning_interface</exec_depend>
</package>